# raidwebsite

./: Cargo.toml
migrations/: 20230420154214_initial-tables.down.sql  20230420154214_initial-tables.up.sql  20230427160538_init_classes.down.sql  20230427160538_init_classes.up.sql  20230429143502_init_raids.down.sql  20230429143502_init_raids.up.sql  20230503130841_add-requirements.down.sql  20230503130841_add-requirements.up.sql  20230527115501_create-invite-tables.down.sql  20230527115501_create-invite-tables.up.sql  20230605175107_fix_typo_kakul.down.sql  20230605175107_fix_typo_kakul.up.sql  20230614074743_elgacia.down.sql  20230614074743_elgacia.up.sql  20230816122054_akkan.down.sql  20230816122054_akkan.up.sql
src/: crypto.rs  data.rs  main.rs
src/routes/: groups.rs  login_form.html  mod.rs  register_form.html  user.rs
src/routes/characters/: mod.rs
src/routes/css/: character_style.css  login_style.css  mod.rs  styles.css
static/: activity_handler.js  header.css  tooltip.css
templates/: add_character.html  characters.html  create_group.html  edit_characters.html  edit_group.html  header.html  invites.html  view_group.html  view_groups.html
